--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2013-04-15
 Author: Gang Chen
 Maintainer: Gang Chen <chengangcs@gmail.com>
 Description: R package used in R training provided by BGI-Tech Solutions(http://bgitechsolutions.com).
-Depends: R (>= 2.15.0), knitr, testthat, plotrix, maps, mapdata, rgl, e1071, C50, FSelector
+Depends: R (>= 2.15.0), knitr, testthat, plotrix, maps, mapdata, rgl, e1071, C50
 Suggests: 
 License: GPL-3
 Encoding: UTF-8
